--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "domain": ""
   },
   "scripts": {
-    "start": "node app.local.js",
+    "dev": "nodemon scripts/dev.js --watch src/ --watch scripts/dev.js",
     "local": "node scripts/local",
     "invoke-lambda": "cross-var aws lambda invoke --function-name $npm_package_config_functionName --region $npm_package_config_region --payload file://api-gateway-event.json lambda-invoke-response.json && cat lambda-invoke-response.json",
     "create-bucket": "cross-var aws s3 mb s3://$npm_package_config_s3BucketName --region $npm_package_config_region",
@@ -27,13 +27,30 @@
   "dependencies": {
     "@vendia/serverless-express": "^4.3.0",
     "body-parser": "^1.17.1",
+    "chalk": "^4.1.0",
     "compression": "^1.6.2",
     "cors": "^2.8.3",
     "express": "^4.15.2"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "copy-webpack-plugin": "^7.0.0",
     "cross-var": "^1.1.0",
+    "eslint": "^7.23.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-styled-components": "0.0.0",
+    "eslint-plugin-styled-components-config": "0.0.2",
+    "nodemon": "^2.0.7",
+    "portfinder": "^1.0.28",
+    "prettier": "^2.2.1",
     "source-map-support": "^0.5.19",
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0"
