--- a/package.json
+++ b/package.json
@@ -1,27 +1,20 @@
 {
-  "name": "@vendia/serverless-express-example",
-  "version": "2.1.1",
+  "name": "serverless-node-aws",
+  "version": "1.0.0",
   "description": "Example application for running a Node Express app on AWS Lambda using Amazon API Gateway.",
   "main": "lambda.js",
-  "config": {
-    "s3BucketName": "academy-serverless-node",
-    "region": "eu-central-1",
-    "cloudFormationStackName": "AcademyServerlessNodeStack",
-    "functionName": "AcademyServerlessNodeFunction",
-    "domain": ""
-  },
   "scripts": {
+    "dev:local": "node scripts/local",
+    "dev:invoke-lambda": "cross-var aws lambda invoke --function-name $FUNCTION_NAME --region $REGION --payload file://api-gateway-event.json lambda-invoke-response.json && cat lambda-invoke-response.json",
     "dev": "nodemon scripts/dev.js --watch src/ --watch scripts/dev.js",
-    "local": "node scripts/local",
-    "invoke-lambda": "cross-var aws lambda invoke --function-name $npm_package_config_functionName --region $npm_package_config_region --payload file://api-gateway-event.json lambda-invoke-response.json && cat lambda-invoke-response.json",
-    "create-bucket": "cross-var aws s3 mb s3://$npm_package_config_s3BucketName --region $npm_package_config_region",
-    "delete-bucket": "cross-var aws s3 rb s3://$npm_package_config_s3BucketName --region $npm_package_config_region",
-    "package": "cross-var aws cloudformation package --template ./sam-template.yaml --s3-bucket $npm_package_config_s3BucketName --output-template sam-template.packaged.yaml --region $npm_package_config_region",
-    "deploy": "cross-var aws cloudformation deploy --template-file sam-template.packaged.yaml --stack-name $npm_package_config_cloudFormationStackName --capabilities CAPABILITY_IAM --region $npm_package_config_region --parameter-overrides DomainName=$npm_package_config_domain",
-    "package-deploy": "npm run build && npm run package && npm run deploy",
-    "delete-stack": "cross-var aws cloudformation delete-stack --stack-name $npm_package_config_cloudFormationStackName --region $npm_package_config_region",
-    "setup": "npm install && (cross-var aws s3api get-bucket-location --bucket $npm_package_config_s3BucketName --region $npm_package_config_region || npm run create-bucket) && npm run package-deploy",
-    "build": "webpack-cli"
+    "release:build": "webpack-cli",
+    "release:package": "cross-var aws cloudformation package --template ./sam-template.yaml --s3-bucket $BUCKET_NAME --output-template sam-template.packaged.yaml --region $REGION",
+    "release:deploy": "cross-var aws cloudformation deploy --template-file sam-template.packaged.yaml --stack-name $CLOUD_FORMATION_STACKNAME --capabilities CAPABILITY_IAM --region $REGION --parameter-overrides DomainName=$DOMAIN",
+    "release": "npm run release:build && npm run release:package && npm run release:deploy",
+    "setup:create-bucket": "cross-var aws s3 mb s3://$BUCKET_NAME --region $REGION",
+    "setup:delete-bucket": "cross-var aws s3 rb s3://$BUCKET_NAME --region $REGION",
+    "setup:delete-stack": "cross-var aws cloudformation delete-stack --stack-name $CLOUD_FORMATION_STACKNAME --region $REGION",
+    "setup": "npm install && (cross-var aws s3api get-bucket-location --bucket $BUCKET_NAME --region $REGION || npm run setup:create-bucket) && npm run release"
   },
   "license": "Apache-2.0",
   "dependencies": {
