--- a/sam-template.yaml
+++ b/sam-template.yaml
@@ -8,12 +8,16 @@ Parameters:
     Description: API Domain name
     Default: ''
 
+  CertificateArn:
+    Type: String
+    Description: ARN for Domain Certificate
+    Default: ''
+
 Conditions:
-  UseDomainName:
-    !Not
-      - !Equals
-        - !Ref DomainName
-        - ''
+  UseDomainName: !Not
+    - !Equals
+      - !Ref DomainName
+      - ''
 
 Resources:
   ExpressApi:
@@ -44,51 +48,21 @@ Resources:
             Path: /{proxy+}
             Method: ANY
 
-  MyApiCertificate:
-    Type: 'AWS::CertificateManager::Certificate'
-    Condition: UseDomainName
-    Properties:
-      DomainName: !Sub '*.${DomainName}'
-      DomainValidationOptions:
-        - DomainName: !Sub '*.${DomainName}'
-          ValidationDomain: !Ref DomainName
-      SubjectAlternativeNames:
-        - !Ref DomainName
-  
-  MyApiDomainName:
+  DomainNameRes:
     Type: 'AWS::ApiGateway::DomainName'
     Condition: UseDomainName
     Properties:
-      CertificateArn: !Ref MyApiCertificate
+      CertificateArn: !Ref CertificateArn
       DomainName: !Ref DomainName
-  
+
   MyApiBasePathMapping:
     Type: 'AWS::ApiGateway::BasePathMapping'
     Condition: UseDomainName
     Properties:
       RestApiId: !Ref ExpressApi
-      DomainName: !Ref MyApiDomainName
+      DomainName: !Ref DomainNameRes
       BasePath: '(none)'
       Stage: prod
-  
-  Route53HostedZone:
-    Type: AWS::Route53::HostedZone
-    Condition: UseDomainName
-    Properties:
-      Name: !Ref DomainName
-  
-  MyApiRoute53RecordSetGroup:
-    Type: AWS::Route53::RecordSetGroup
-    Condition: UseDomainName
-    Properties:
-      HostedZoneId: !Ref Route53HostedZone
-      RecordSets:
-        - Name: !Sub ${DomainName}.
-          Type: A
-          AliasTarget:
-            EvaluateTargetHealth: false
-            HostedZoneId: !GetAtt MyApiDomainName.DistributionHostedZoneId
-            DNSName: !GetAtt MyApiDomainName.DistributionDomainName
 
 Outputs:
   LambdaFunctionConsoleUrl:
