--- a/scripts/.env
+++ b/scripts/.env
@@ -1,2 +1,1 @@
-FUNCTION_NAME="AcademyServerlessNodeFunction" REGION="eu-central-1" CLOUD_FORMATION_STACKNAME="AcademyServerlessNodeStack" BUCKET_NAME="academy-serverless-node"
-# DOMAIN=""
+FUNCTION_NAME="AcademyServerlessNodeFunction" REGION="eu-central-1" CLOUD_FORMATION_STACKNAME="AcademyServerlessNodeStack" BUCKET_NAME="academy-serverless-node" DOMAIN="serverless.academy.dube.io" CERTIFICATE_ARN="arn:aws:acm:us-east-1:785750802441:certificate/dadb809e-c51f-456d-b22f-e67d6a939037"
